# ptp

./: .clang-format  .gitignore  .notfunction  LICENSE  README.md  gtags.conf  meson.build  test-driver.py  waf  wscript
data/: meson.build
doc/: development.md  internals.md  kad_event_loops.md
doc/man/: ptp.1.in
man/: meson.build  ptp.1.in
src/: base.h  config.h.in  events.c  events.h  file.c  file.h  log.c  log.h  main.c  meson.build  options.c  options.h  proto.c  proto.h  runtests.c  server.c  server.h  signals.c  signals.h  timers.c  timers.h  wscript
src/net/: actions.c  actions.h  iobuf.c  iobuf.h  kad.c  kad.h  kad_rpc.c  kad_rpc.h  msg.c  msg.h  serialization.h  socket.c  socket.h  util.c  util.h
src/net/kad/: bencode.c  bencode.h  defs.h.in  dht.c  dht.h  id.h  lookup.c  lookup.h  meson.build  queries.h  req_lru.h  routes.c  routes.h  rpc.c  rpc.h
src/net/kad/.full/: meson.build
src/net/kad/.tiny/: meson.build
src/net/kad/_tiny/: meson.build
src/net/kad/bencode/: dht.c  dht.h  globals.c  parser.c  parser.h  routes.c  routes.h  rpc_msg.c  rpc_msg.h  serde.c  serde.h
src/proto/: iobuf.c  iobuf.h  kad.c  kad.h  msg.c  msg.h  serialization.c
src/utils/: aatree.h  array.h  bit.h  bitfield.h  bits.h  bstree.h  bstree_defs.h  btree_def.h  btree_impl.h  byte_array.h  cont.h  defs.h  growable.h  hash.h  heap.h  helpers.h  list.h  lookup.h  meson.build  misc.c  misc.h  queue.h  rbtree.h  rbtree_defs.h  safe.c  safe.h  safer.c  safer.h  string_s.c  string_s.h  time.c  time.h  u64.c  u64.h  wscript
tests/: aatree.c  bit.c  bits.c  bstree.c  file.c  hash.c  kad.c  kad_bencode.c  kad_dht.c  kad_rpc.c  kad_tests.h  list.c  meson.build  misc.c  rbtree.c  serialization.c  timers.c  timers_once.c  timers_periodic.c  u64.c  wscript
tests/integration/: common.py  helpers.py  listen-to-client  listen_to_client.py  meson.build  multi-nodes  multi_nodes.py  runtests  send-to-server  send_to_server.py  single-server
tests/integration/runs/: bootstrap.py  defaults.py  malformed.py  multi_nodes.py  routes_state.py
tests/kad/: bencode.c  data.h  dht.c  dht_alt.c  queries.c  req_lru.c  routes.c  routes_alt.c  rpc.c  test_util.c  test_util.h
tests/kad/bencode/: data.h  data_dht.h  data_routes.h  data_rpc_msg.h  dht.c  parser.c  routes.c  rpc_msg.c
tests/utils/: aatree.c  bitfield.c  bits.c  bstree.c  byte_array.c  growable.c  hash.c  heap.c  list.c  lookup.c  queue.c  rbtree.c  u64.c
tools/: coverage  cppcheck-run  meson.build  tags  tree.gv
tools/git-hooks/: pre-commit
