# Copyright (c) 2017 Foudil Brétel.  All rights reserved.
# -*- mode: python -*-

utils_sources = ['string_s.c']
utilslib = static_library('utils',
                          utils_sources,
                          # include_directories : inc,
                          # dependencies : glib_dep,
                          install : true)
